# imdb-dataset-to-postgresql

./: .dockerignore  .gitignore  .gitmodules  README.md  addon.cpp  binding.gyp  docker-compose.yml  imdb_schema.sql  index.js  jest.config.ts  meson.build  package.json  tsconfig.json
.github/workflows/: build.yml  image.yml  lint.yml  meson.yml
module/: NativeParser.ts  TSVParser.ts  columns.ts  index.ts  types.ts
scripts/: Dockerfile  actual.sh  build.sh  clear_tables.sql  delete_schema.sql  download.sh  dump_all.sh  dump_for_docker.sh  imdb_schema.sql  process_all.sh
src/: EventEmitter.cpp  InternalParsers.cpp  InternalParsers.hpp  LogWriter.cpp  LogWriter.hpp  Model.ts  Models.cpp  Models.hpp  ParseMetadata.cpp  ParseMetadata.hpp  ParserStructure.cpp  ParserStructure.hpp  TSVParser.cpp  TSVParser.hpp  TSVParser.ts  columns.ts  debug.js  helper.hpp  index.ts  internalParser.ts  main.cpp  meson.build  module.cpp  postgres.hpp  print.cpp  print.hpp  types.hpp
src/benchmark/: .gitignore  benchmark.ts  package.json  testRun.ts  tsconfig.json
src/cpp/: EventEmitter.cpp  ParserStructure.cpp  TSVParser.cpp  helper.hpp  typess.hpp
src/debug/: debug.js
src/helper/: cli_arguments.cpp  cli_arguments.hpp  expected.hpp  meson.build  postgres.cpp  postgres.hpp  threads.cpp  threads.hpp
src/source/: DataSource.cpp  DataSource.hpp  meson.build
src/ts/: NativeParser.ts  TSVParser.ts  index.ts
subprojects/: .gitignore  csvlib.wrap  postgres-cxx-client.wrap
subprojects/packagefiles/csvlib/: meson.build
subprojects/packagefiles/csvlib/csvlib/: meson.build
subprojects/packagefiles/postgres-cxx-client/: meson.build  meson.options
subprojects/packagefiles/postgres-cxx-client/examples/: meson.build
subprojects/packagefiles/postgres-cxx-client/src/: meson.build
subprojects/packagefiles/postgres-cxx-client/tests/unit/: meson.build
tests/: leakage-types.d.ts  raw.test.js  raw.test.ts  test.js  test.spec.ts  test.spec.ts.ign
tests/files/: title.ratings.header.tsv  title.ratings.large.tsv
