src_files += files(
    'InternalParsers.cpp',
    'Models.cpp',
    'TSVParser.cpp',
    'main.cpp',
    'ParseMetadata.cpp',
)

header_files += files(
    'InternalParsers.hpp',
    'Models.hpp',
    'ParserStructure.hpp',
    'TSVParser.hpp',
    'ParseMetadata.hpp',
)
inc_dirs += include_directories('.')

subdir('helper')
subdir('source')
