src_files += files(
    'InternalParsers.cpp',
    'Models.cpp',
    'ParseMetadata.cpp',
    'TSVParser.cpp',
    'main.cpp',
    'print.cpp',
)

header_files += files(
    'InternalParsers.hpp',
    'Models.hpp',
    'ParseMetadata.hpp',
    'ParserStructure.hpp',
    'TSVParser.hpp',
    'print.hpp',
)
inc_dirs += include_directories('.')

subdir('helper')
subdir('source')
