src_files += files(
    'Channel.cpp',
    'Client.cpp',
    'Command.cpp',
    'Config.cpp',
    'Connection.cpp',
    'Consumer.cpp',
    'Context.cpp',
    'Dispatcher.cpp',
    'Error.cpp',
    'Field.cpp',
    'IChannel.cpp',
    'Job.cpp',
    'PrepareData.cpp',
    'PreparedCommand.cpp',
    'Receiver.cpp',
    'Result.cpp',
    'Row.cpp',
    'Statement.cpp',
    'Status.cpp',
    'Time.cpp',
    'Transaction.cpp',
    'Visitable.cpp',
    'Visitors.cpp',
    'Worker.cpp',
)
